Bug 1532286 - Wasm/Ion: generate better code for wasmSelect in some cases.  r=jandem.

This patch creates better code, when compiling Wasm via Ion, for 32-bit
integer selects which are guarded by a 32-bit integer compare.  No other type
combinations are optimised at present.  Changes:

* LIR-shared.h: Add new LIR node LWasmCompareAndSelect, holding the values to
  compare, the values to select over, and the comparison details.

* CanEmitCompareAtUses:

  - Rewrite (transform mechanically) remove hard-to-reason-about control flow
    (a loop which probably only iterates once, and a boolean control
    variable).  These are both removed and replaced by obvious straight-line
    code.

  - Also allow deferred emission when there is a single user and it is a
    WasmSelect.

* LIRGenerator::visitWasmSelect for both arm and x86-shared:

  - All target specific variants have been removed and replaced by a shared
    version.

  - If the condition is a compare, marked 'may be emitted at use point', and
    has the correct types, bundle up the comparison arguments and values to be
    selected-over into a single LWasmCompareAndSelect node.

* CodeGenerator::visitWasmCompareAndSelect for both arm and x86-shared:

  - All target specific variants have been removed and replaced by a shared
    version.

  - From an LWasmCompareAndSelect node, generate the desired optimal sequence:
    a compare immediately followed by a conditional move.

* CodeGenerator::generateBody(), ifdef JS_JITSPEW, one liner ridealong: print
  "# " before the LIR instruction name, so as to make reading IONFLAGS=codegen
  output easier.  No (release-) functional change.

* New test case select-int32.js.

Apart from the removal of aarch64-specific lowering and codegen routines, none
of the changes apply to aarch64, because wasm-via-Ion on aarch64 is not
currently supported.

Differential Revision: https://phabricator.services.mozilla.com/D27071

--HG--
extra : amend_source : b78829ee47231cbd35be4844a91a0ed4582e3ecc